Added and completed section 2

--- a/Bioinformatics/sections/simple/2 - Alignment algorithms.tex
+++ b/Bioinformatics/sections/simple/2 - Alignment algorithms.tex
@@ -11,4 +11,7 @@
 
         \subsection{Needleman-Wunsh algorithm}
         \subfile{../sub/2.2 - NW algorithm}
+
+        \subsection{Smith-Waterman algorithm}
+        \subfile{../sub/2.3 - SW algorithm}
 \end{document}
