Bioinformatics: fixed section 2, started section 3

--- a/Bioinformatics/main/Bioinformatics.tex
+++ b/Bioinformatics/main/Bioinformatics.tex
@@ -20,8 +20,11 @@
     \section{Introduction to Bioinformatics}
     \subfile{../sections/simple/1 - Intro to Bioinformatics}
 
-    \section{Alignment algorithms}
-    \subfile{../sections/simple/2 - Alignment algorithms}
+    \section{Pair-wise alignment}
+    \subfile{../sections/simple/2 - Pair-wise alignment}
+
+    \section{Multiple alignment}
+    \subfile{../sections/simple/3 - Multiple alignment}
 
     \printbibliography
     \printglossaries
