--- a/Bioinformatics/extras/Bib/papers.bib
+++ b/Bioinformatics/extras/Bib/papers.bib
@@ -1,22 +1,92 @@
 @article{needleman1970,
-    author = {Saul B. Needleman and Christian D. Wunsch},
-    title = {A general method applicable to the search for similarities in the amino acid sequence of two proteins},
+    author  = {Saul B. Needleman and Christian D. Wunsch},
+    title   = {A general method applicable to the search for similarities in the amino acid sequence of two proteins},
     journal = {Journal of Molecular Biology},
-    volume = {48},
-    number = {3},
-    pages = {443-453},
-    year = {1970},
-    doi = {10.1016/0022-2836(70)90057-4},
+    volume  = {48},
+    number  = {3},
+    pages   = {443-453},
+    year    = {1970},
+    doi     = {10.1016/0022-2836(70)90057-4},
 }
 
 
 @article{smith1981,
-    author = {T.F. Smith and M.S. Waterman},
-    title = {Identification of common molecular subsequences},
+    author  = {T.F. Smith and M.S. Waterman},
+    title   = {Identification of common molecular subsequences},
     journal = {Journal of Molecular Biology},
-    volume = {147},
-    number = {1},
-    pages = {195-197},
-    year = {1981},
-    doi = {10.1016/0022-2836(81)90087-5},
+    volume  = {147},
+    number  = {1},
+    pages   = {195-197},
+    year    = {1981},
+    doi     = {10.1016/0022-2836(81)90087-5},
+}
+
+@article{lipman1985,
+    author  = {David J. Lipman  and William R. Pearson },
+    title   = {Rapid and Sensitive Protein Similarity Searches},
+    journal = {Science},
+    volume  = {227},
+    number  = {4693},
+    pages   = {1435-1441},
+    year    = {1985},
+    doi     = {10.1126/science.2983426},
+}
+
+
+@article{altschul1990,
+    author  = {Stephen F. Altschul and Warren Gish and Webb Miller and Eugene W. Myers and David J. Lipman},
+    title   = {Basic local alignment search tool},
+    journal = {Journal of Molecular Biology},
+    volume  = {215},
+    number  = {3},
+    pages   = {403-410},
+    year    = {1990},
+    doi     = {10.1016/S0022-2836(05)80360-2},
+}
+
+
+@article{thompson1994,
+    author  = {Thompson, Julie D. and Higgins, Desmond G. and Gibson, Toby J.},
+    title   = {CLUSTAL W: improving the sensitivity of progressive multiple sequence 
+            alignment through sequence weighting, position-specific gap penalties and
+            weight matrix choice},
+    journal = {Nucleic Acids Research},
+    volume  = {22},
+    number  = {22},
+    pages   = {4673-4680},
+    year    = {1994},
+    month   = {11},
+    doi     = {10.1093/nar/22.22.4673},
+}
+
+@article{shannon1948,
+    title   = {A mathematical theory of communication},
+    author  = {Claude E. Shannon},
+    journal = {Bell Syst. Tech. J.},
+    volume  = {27},
+    number  = {3},
+    pages   = {379--423},
+    year    = {1948},
+    doi     = {10.1002/J.1538-7305.1948.TB01338.X},
+}
+
+@article{sokal1958,
+    author  = {Robert R. Sokal and Charles Duncan Michener},
+    title   = {A statistical method for evaluating systematic relationships},
+    journal = {University of Kansas science bulletin},
+    year    = {1958},
+    volume  = {38},
+    pages   = {1409-1438},
+}
+
+@article{saito1987,
+    author  = {Saitou, N and Nei, M},
+    title   = {The neighbor-joining method: a new method for reconstructing phylogenetic trees.},
+    journal = {Molecular Biology and Evolution},
+    volume  = {4},
+    number  = {4},
+    pages   = {406-425},
+    year    = {1987},
+    month   = {07},
+    doi     = {10.1093/oxfordjournals.molbev.a040454},
 }
