--- a/Bioinformatics/sections/simple/2 - Pair-wise alignment.tex
+++ b/Bioinformatics/sections/simple/2 - Pair-wise alignment.tex
@@ -20,5 +20,8 @@
 
         \subsection{Smith-Waterman algorithm}
         \subfile{../sub/2.3 - SW algorithm}
+
+        \subsection{Heuristic algorithms}
+        \subfile{../sub/2.4 - Heuristic algorithms}
         \cleardoublepage
 \end{document}
