--- a/Bioinformatics/sections/simple/3 - Multiple alignment.tex
+++ b/Bioinformatics/sections/simple/3 - Multiple alignment.tex
@@ -24,9 +24,9 @@
 
     Hence, unless extreme precision is needed, (e.g. medical analysis), heuristic 
         algorithms suffice our needs. We use the remainder of this section
-        to discuss several of such algorithms.
+        to discuss a couple of such algorithms.
 
-    \subsection{FASTA}
-    \subfile{../sub/3.1 - FASTA}
-
+    \subsection{The greedy approach}
+    \subfile{../sub/3.1 - Thre greedy approach}
+    \clearpage
 \end{document}
