BioInfo: project completed. ToDos: examples, double-check spelling

--- a/Bioinformatics/main/Bioinformatics.tex
+++ b/Bioinformatics/main/Bioinformatics.tex
@@ -15,7 +15,7 @@
 \newacronym{t}{T}{Thymine}
 \newacronym{u}{U}{Uracile}
 \newacronym{tu}{TU}{taxonomic units}
-
+\newacronym{hmm}{HMM}{Hidden Markov Models}
 \begin{document}
     \maketitle
 
