Compiled without the draft flag

--- a/Bioinformatics/main/Bioinformatics.tex
+++ b/Bioinformatics/main/Bioinformatics.tex
@@ -1,4 +1,4 @@
-\documentclass[moon, draft]{lectures2}
+\documentclass[moon]{lectures2}
 \usepackage{chemfig}
 
 \title{Notes on Bioinformatics}
@@ -15,7 +15,8 @@
 \newacronym{t}{T}{Thymine}
 \newacronym{u}{U}{Uracile}
 \newacronym{tu}{TU}{taxonomic units}
-\newacronym{hmm}{HMM}{Hidden Markov Models}
+\newacronym{hmm}{hmm}{Hidden Markov Models}
+
 \begin{document}
     \maketitle
 
