--- a/Bioinformatics/sections/simple/4 - Molecular evolution.tex
+++ b/Bioinformatics/sections/simple/4 - Molecular evolution.tex
@@ -1,5 +1,5 @@
 \documentclass{subfiles}
-\begin{document}
+\begin{document}\label{Sec:4}
     In \emph{Section \ref{Sec:ClustalW}} we introduced the idea of using trees to build 
         the multiple alignment of a set of sequences. In the present section we begin with an 
         introdution on molecular evolution, i.e., how genes mutate through time; then we describe 
