BioInfo: fixed typos

--- a/Bioinformatics/sections/sub/2.1 - Alignment and similarity measures.tex
+++ b/Bioinformatics/sections/sub/2.1 - Alignment and similarity measures.tex
@@ -58,7 +58,7 @@
         which, as we have said, are extremely frequent in nature. Therefore,
         though easy to inplement, we should consider something different.
     
-    The necessity to consider gaps lead to a question: how do we define ``the best alignment``
+    The necessity to consider gaps lead to a question: how do we define ``the best alignment''
         when gaps are involved? To solve the problem we define the so called \emph{similarity measure};
         i.e., a measure that takes in account both matches/mismatches and gaps.
         The one we use is the following
