--- a/Bioinformatics/sections/sub/2.2 - NW algorithm.tex
+++ b/Bioinformatics/sections/sub/2.2 - NW algorithm.tex
@@ -24,7 +24,7 @@
                 \end{cases}
             \]
             If any of the index is negative, that entry has value equal to zero.
-        \item Within the last row, or column, dind the cell with the maximum score/s;
+        \item Within the last row, or column, find the cell with the maximum score/s;
             from it track the best path/s proceeding backwards.
     \end{enumerate}
 \end{document}
