--- a/Bioinformatics/sections/sub/2.4 - Heuristic algorithms.tex
+++ b/Bioinformatics/sections/sub/2.4 - Heuristic algorithms.tex
@@ -11,7 +11,7 @@
         Since these store thousands or hundred of thousands of sequences, 
         such algorithms are clearly not suitable for the task. 
         In this context the use of heuristic algorithms is preferred.
-        We recall that a heuristic algorithms do not garantee the correct/best 
+        We recall that a heuristic algorithm does not garantee the correct/best 
         solution, but they provide a good trade-off between efficiency and correctness.
 
     In this section we focus on pair-wise alignment by means of heuristic algorithms;
