--- a/Bioinformatics/sections/sub/4.2 - Phylogenetic trees.tex
+++ b/Bioinformatics/sections/sub/4.2 - Phylogenetic trees.tex
@@ -1,7 +1,7 @@
 \documentclass{subfiles}
 \begin{document}
     Multiple alignment is based on the phylogenetic trees. These are 
-        trese in which the nodes represent the taxonomic units, while the branches 
+        trees in which the nodes represent the taxonomic units, while the branches 
         describe the relashionship between them. Each internal node has three branches:
         one that leads to the ancestor and two to the descendants.
 
