--- a/Bioinformatics/sections/sub/5.1 - The decoding problem.tex
+++ b/Bioinformatics/sections/sub/5.1 - The decoding problem.tex
@@ -15,7 +15,7 @@
     Since the values obtained by the algorithm are very small, in most cases we consider 
         the logarithm of such quantities.
 
-    As an alternative approach one can conpute the besst path as follow:
+    As an alternative approach one can conpute the best path as follow:
         consider the forward probability \(f_{k, i}\) of producing \(x_{1} \cdots x_{i}\)
         reaching state \(k\), defined by the recurrence
         \[
