--- a/Bioinformatics/sections/subsub/1.1.2 - Synthesis.tex
+++ b/Bioinformatics/sections/subsub/1.1.2 - Synthesis.tex
@@ -24,8 +24,8 @@
         these are then transcibed via RNA and within ribosomes we synthesize the proteins.
 
     What we just described assumes no error occurs during DNA replication.
-        As easily understood this is rarely the case. In fact, if errors did not occure,
-        evolution would impossible. More in general, when dealing with DNA sequences we have to consider 
+        As easily understood this is rarely the case. In fact, if errors did not occur,
+        evolution would be impossible. More in general, when dealing with DNA sequences we have to consider 
         mutations, i.e, nucleotide X becomes nucleotide Y, and/or gaps, 
         some nucleotide could get added/removed from the original sequence.
 \end{document}
