--- a/Bioinformatics/sections/subsub/2.4.1 - FASTA.tex
+++ b/Bioinformatics/sections/subsub/2.4.1 - FASTA.tex
@@ -1,6 +1,6 @@
 \documentclass{subfiles}
 \begin{document}
-    FASTA (or FAST-All, see \cite{lipman1985} for mojor details) is a heuristic 
+    FASTA (or FAST-All, see \cite{lipman1985} for major details) is a heuristic 
         local alignment algorithm; that is, it finds the best possible alignment,
         in the heuristic sense, in a relatively short amount of time. 
 
@@ -17,7 +17,7 @@
         be the database sequences. Fix \(k = 2\), the factors of \(s\) then are: 
         \(AC, CG, GG\), \(GY, TY, YF, FF\). Considering for example the factor \(AC\),
         we have that it occurs at position 0 in \(w_{1}\), at position 1 in \(w_{3}\)
-        and does not occur in \(w_{2}\). We do the same for each of the factors.
+        and does not occur in \(w_{2}\). We do the same for each other factor.
 
     Once the index is computed, we try to identify the diagonals, as done in the SW-algorithm;
         note that in this case the diagonals is given by the diffence of the positions in the factors of 
