--- a/Bioinformatics/sections/subsub/4.2.2 - Neighbor-join.tex
+++ b/Bioinformatics/sections/subsub/4.2.2 - Neighbor-join.tex
@@ -4,7 +4,7 @@
         procedure that build unrooted trees in a similar manner to UPGMA.
         The procedure is the following:
         \begin{enumerate}
-            \item Let \(C_{i} = \set{s_{i}}\), for all \(i\),
+            \item Let \(C_{i} = \set{s_{i}}\), for all \(i\).
             \item Compute 
                 \[
                     u_{i} = \sum_{k \ne i} \frac{D_{i, k}}{n - 2}
