BioInfo: fixed section 5

--- a/Bioinformatics/sections/simple/5 - HMM.tex
+++ b/Bioinformatics/sections/simple/5 - HMM.tex
@@ -13,7 +13,7 @@
     Formally, a HMM is defined by the 4-tuple \((Q, \Sigma, A, E)\) where \(Q\)
         is a set of states with some unknown probabily distribution, \(\Sigma\)
         is the output alphabet, \(A \subseteq Q \times Q\) stores the probabily
-        of going from state \(i\) to state \(j, i, j \in Q\) and \(E \subset Q \times E\)
+        of going from state \(i\) to state \(j\) and \(E \subset Q \times E\)
         stores the probabily of emmitting a symbol \(\sigma\) while in state \(k\).
 
     \subsection{The decoding problem}
